Update configuration files and dependencies for HomeNet Bridge
- Updated `pnpm-lock.yaml` to reflect the new version of `debug` dependency.
- Made formatting adjustments in various YAML configuration files for consistency, including changes to string quotes and spacing.
- Enhanced readability and maintainability of configuration files by standardizing formatting.

These changes aim to improve the overall structure and clarity of the HomeNet Bridge project, ensuring better support for device configurations.

--- a/packages/core/config/commax.new.yaml
+++ b/packages/core/config/commax.new.yaml
@@ -21,30 +21,29 @@ homenet_bridge:
     tx_footer: []
 
   #일괄소등
-  #상태      Head,   ON,   ID, 0x00, 0x00, 0x00, 0x00, add checksum 
+  #상태      Head,   ON,   ID, 0x00, 0x00, 0x00, 0x00, add checksum
   #상태 ON   0xA0, 0x01, 0x01, 0x00, 0x00, 0x17, 0x00, add checksum
   #상태 OFF  0xA0, 0x00, 0x01, 0x00, 0x00, 0x17, 0x00, add checksum
   #응답 ON   0xA2, 0x01, 0x01, 0x00, 0x00, 0x17, 0x00, add checksum
   #응답 OFF  0xA2, 0x00, 0x01, 0x00, 0x00, 0x17, 0x00, add checksum
 
-  #명령      Head,   ID,   On, 0x00, 0x00, 0x00, 0x00, add checksum 
+  #명령      Head,   ID,   On, 0x00, 0x00, 0x00, 0x00, add checksum
   #명령 ON   0x22, 0x01, 0x01, 0x01, 0x00, 0x00, 0x00, add checksum
   #명령 OFF  0x22, 0x01, 0x00, 0x01, 0x00, 0x00, 0x00, add checksum
 
-
   #조명
-  #상태      Head,   ON,   ID, 0x00, 0x00, 0x00, 0x00, add checksum 
+  #상태      Head,   ON,   ID, 0x00, 0x00, 0x00, 0x00, add checksum
   #상태 ON   0xB0, 0x01, 0x01, 0x00, 0x00, 0x00, 0x00, add checksum
   #상태 OFF  0xB0, 0x00, 0x01, 0x00, 0x00, 0x00, 0x00, add checksum
   #응답 ON   0xB1, 0x01, 0x01, 0x00, 0x00, 0x00, 0x00, add checksum
   #응답 OFF  0xB1, 0x00, 0x01, 0x00, 0x00, 0x00, 0x00, add checksum
 
-  #명령      Head,   ID,   On, 0x00, 0x00, 0x00, 0x00, add checksum 
+  #명령      Head,   ID,   On, 0x00, 0x00, 0x00, 0x00, add checksum
   #명령 ON   0x31, 0x01, 0x01, 0x00, 0x00, 0x00, 0x00, add checksum
   #명령 OFF  0x31, 0x01, 0x00, 0x00, 0x00, 0x00, 0x00, add checksum
   light:
-    - name: "Light Breaker"
-      state: 
+    - name: 'Light Breaker'
+      state:
         data: [0xA0, 0x00, 0x01]
         mask: [0xF0, 0x00, 0xFF]
       state_on:
@@ -53,15 +52,15 @@ homenet_bridge:
       state_off:
         offset: 1
         data: [0x00]
-      command_on: 
+      command_on:
         data: [0x22, 0x01, 0x01, 0x01, 0x00, 0x00, 0x00]
         ack: [0xA2, 0x01, 0x01]
       command_off:
         data: [0x22, 0x01, 0x00, 0x01, 0x00, 0x00, 0x00]
         ack: [0xA2, 0x00, 0x01]
 
-    - name: "Light 1"
-      state: 
+    - name: 'Light 1'
+      state:
         data: [0xB0, 0x00, 0x01]
         mask: [0xF0, 0x00, 0xFF]
       state_on:
@@ -70,15 +69,15 @@ homenet_bridge:
       state_off:
         offset: 1
         data: [0x00]
-      command_on: 
+      command_on:
         data: [0x31, 0x01, 0x01, 0x00, 0x00, 0x00, 0x00]
         ack: [0xB1, 0x01, 0x01]
       command_off:
         data: [0x31, 0x01, 0x00, 0x00, 0x00, 0x00, 0x00]
         ack: [0xB1, 0x00, 0x01]
 
-    - name: "Light 2"
-      state: 
+    - name: 'Light 2'
+      state:
         data: [0xB0, 0x00, 0x02]
         mask: [0xF0, 0x00, 0xFF]
       state_on:
@@ -87,15 +86,15 @@ homenet_bridge:
       state_off:
         offset: 1
         data: [0x00]
-      command_on: 
+      command_on:
         data: [0x31, 0x02, 0x01, 0x00, 0x00, 0x00, 0x00]
         ack: [0xB1, 0x01, 0x02]
       command_off:
         data: [0x31, 0x02, 0x00, 0x00, 0x00, 0x00, 0x00]
         ack: [0xB1, 0x00, 0x02]
 
-    - name: "Light 3"
-      state: 
+    - name: 'Light 3'
+      state:
         data: [0xB0, 0x00, 0x03]
         mask: [0xF0, 0x00, 0xFF]
       state_on:
@@ -104,15 +103,15 @@ homenet_bridge:
       state_off:
         offset: 1
         data: [0x00]
-      command_on: 
+      command_on:
         data: [0x31, 0x03, 0x01, 0x00, 0x00, 0x00, 0x00]
         ack: [0xB1, 0x01, 0x03]
       command_off:
         data: [0x31, 0x03, 0x00, 0x00, 0x00, 0x00, 0x00]
         ack: [0xB1, 0x00, 0x03]
 
-    - name: "Light 4"
-      state: 
+    - name: 'Light 4'
+      state:
         data: [0xB0, 0x00, 0x04]
         mask: [0xF0, 0x00, 0xFF]
       state_on:
@@ -121,15 +120,14 @@ homenet_bridge:
       state_off:
         offset: 1
         data: [0x00]
-      command_on: 
+      command_on:
         data: [0x31, 0x04, 0x01, 0x00, 0x00, 0x00, 0x00]
         ack: [0xB1, 0x01, 0x04]
       command_off:
         data: [0x31, 0x04, 0x00, 0x00, 0x00, 0x00, 0x00]
         ack: [0xB1, 0x00, 0x04]
 
-
-  #상태      Head,   ON,   ID,  Cur,  Tar, 0x00, 0x00, add checksum 
+  #상태      Head,   ON,   ID,  Cur,  Tar, 0x00, 0x00, add checksum
   #상태 ON   0x82, 0x81, 0x01, 0xXX, 0xXX, 0x00, 0x00, add checksum
   #상태 OFF  0x82, 0x80, 0x01, 0xXX, 0xXX, 0x00, 0x00, add checksum
   #상태 HEAT 0x82, 0x83, 0x01, 0xXX, 0xXX, 0x00, 0x00, add checksum
@@ -137,21 +135,21 @@ homenet_bridge:
   #응답 OFF  0x84, 0x80, 0x01, 0xXX, 0xXX, 0x00, 0x00, add checksum
   #응답 HEAT 0x84, 0x83, 0x01, 0xXX, 0xXX, 0x00, 0x00, add checksum
 
-  #명령        Head,   ID,  CMD,   ON, 0x00, 0x00, 0x00, add checksum 
+  #명령        Head,   ID,  CMD,   ON, 0x00, 0x00, 0x00, add checksum
   #명령 ON     0x04, 0x01, 0x04, 0x81, 0x00, 0x00, 0x00, add checksum
   #명령 OFF    0x04, 0x01, 0x04, 0x00, 0x00, 0x00, 0x00, add checksum
   #명령 OFF    0x04, 0x01, 0x04, 0x00, 0x00, 0x00, 0x00, add checksum
   #명령 CHANGE 0x04, 0x01, 0x03, 0xXX, 0x00, 0x00, 0x00, add checksum
   climate:
-    - name: "Heater 1"
+    - name: 'Heater 1'
       visual:
         min_temperature: 5 °C
         max_temperature: 40 °C
         temperature_step: 1 °C
-      state: 
+      state:
         data: [0x80, 0x00, 0x01]
         mask: [0xF9, 0x00, 0xFF]
-      state_temperature_current: 
+      state_temperature_current:
         offset: 3
         signed: False
         decode: bcd
@@ -186,15 +184,15 @@ homenet_bridge:
             signed: false
             endian: big
 
-    - name: "Heater 2"
+    - name: 'Heater 2'
       visual:
         min_temperature: 5 °C
         max_temperature: 40 °C
         temperature_step: 1 °C
-      state: 
+      state:
         data: [0x80, 0x00, 0x02]
         mask: [0xF9, 0x00, 0xFF]
-      state_temperature_current: 
+      state_temperature_current:
         offset: 3
         signed: False
         decode: bcd
@@ -229,15 +227,15 @@ homenet_bridge:
             signed: false
             endian: big
 
-    - name: "Heater 3"
+    - name: 'Heater 3'
       visual:
         min_temperature: 5 °C
         max_temperature: 40 °C
         temperature_step: 1 °C
-      state: 
+      state:
         data: [0x80, 0x00, 0x03]
         mask: [0xF9, 0x00, 0xFF]
-      state_temperature_current: 
+      state_temperature_current:
         offset: 3
         signed: False
         decode: bcd
@@ -272,15 +270,15 @@ homenet_bridge:
             signed: false
             endian: big
 
-    - name: "Heater 4"
+    - name: 'Heater 4'
       visual:
         min_temperature: 5 °C
         max_temperature: 40 °C
         temperature_step: 1 °C
-      state: 
+      state:
         data: [0x80, 0x00, 0x04]
         mask: [0xF9, 0x00, 0xFF]
-      state_temperature_current: 
+      state_temperature_current:
         offset: 3
         signed: False
         decode: bcd
@@ -315,8 +313,7 @@ homenet_bridge:
             signed: false
             endian: big
 
-
-  #상태      Head,   ON,   ID,  SPD, 0x00, 0x00, 0x00, add checksum 
+  #상태      Head,   ON,   ID,  SPD, 0x00, 0x00, 0x00, add checksum
   #상태 OFF  0xF6, 0x00, 0x01, 0x00, 0x00, 0x00, 0x00, add checksum
   #상태 LOW  0xF6, 0x04, 0x01, 0x01, 0x00, 0x00, 0x00, add checksum
   #상태 MID  0xF6, 0x04, 0x01, 0x02, 0x00, 0x00, 0x00, add checksum
@@ -329,14 +326,14 @@ homenet_bridge:
   #응답 MID  0xF8, 0x04, 0x01, 0x02, 0x00, 0x00, 0x00, add checksum
   #응답 HIGH 0xF8, 0x04, 0x01, 0x03, 0x00, 0x00, 0x00, add checksum
 
-  #명령      Head,   ID,  CMD,  SPD, 0x00, 0x00, 0x00, add checksum 
-  #명령 OFF  0x78, 0x01, 0x01, 0x00, 0x00, 0x00, 0x00, add checksum 
-  #명령 ON   0x78, 0x01, 0x01, 0x04, 0x00, 0x00, 0x00, add checksum 
-  #명령 LOW  0x78, 0x01, 0x02, 0x01, 0x00, 0x00, 0x00, add checksum 
-  #명령 MID  0x78, 0x01, 0x02, 0x02, 0x00, 0x00, 0x00, add checksum 
-  #명령 HIGH 0x78, 0x01, 0x02, 0x03, 0x00, 0x00, 0x00, add checksum 
+  #명령      Head,   ID,  CMD,  SPD, 0x00, 0x00, 0x00, add checksum
+  #명령 OFF  0x78, 0x01, 0x01, 0x00, 0x00, 0x00, 0x00, add checksum
+  #명령 ON   0x78, 0x01, 0x01, 0x04, 0x00, 0x00, 0x00, add checksum
+  #명령 LOW  0x78, 0x01, 0x02, 0x01, 0x00, 0x00, 0x00, add checksum
+  #명령 MID  0x78, 0x01, 0x02, 0x02, 0x00, 0x00, 0x00, add checksum
+  #명령 HIGH 0x78, 0x01, 0x02, 0x03, 0x00, 0x00, 0x00, add checksum
   fan:
-    - name: "Fan 1"
+    - name: 'Fan 1'
       state:
         data: [0xF0, 0x00, 0x01]
         mask: [0xF1, 0x00, 0xFF]
@@ -369,8 +366,8 @@ homenet_bridge:
         offset: 3
         signed: False
       preset_modes:
-        - "Auto"
-        - "Night"
+        - 'Auto'
+        - 'Night'
       state_preset: !homenet_logic
         type: state_lambda
         conditions:
@@ -378,25 +375,25 @@ homenet_bridge:
               type: check_value
               offset: 1
               value: 0x02
-            then: "Auto"
+            then: 'Auto'
           - extractor:
               type: check_value
               offset: 1
               value: 0x06
-            then: "Night"
+            then: 'Night'
         mapping:
-          default: ""
+          default: ''
 
-  #상태      Head,   ON,   ID, 0x00, 0x00, 0x00, 0x00, add checksum 
+  #상태      Head,   ON,   ID, 0x00, 0x00, 0x00, 0x00, add checksum
   #상태 ON   0x90, 0x80, 0x80, 0x00, 0x00, 0x00, 0x00, add checksum
   #상태 OFF  0x90, 0x40, 0x40, 0x00, 0x00, 0x00, 0x00, add checksum
   #응답 OFF  0x91, 0x88, 0x88, 0x00, 0x00, 0x00, 0x00, add checksum
 
-  #명령      Head,   ID,   On, 0x00, 0x00, 0x00, 0x00, add checksum 
+  #명령      Head,   ID,   On, 0x00, 0x00, 0x00, 0x00, add checksum
   #명령 OFF  0x11, 0x01, 0x80, 0x00, 0x00, 0x00, 0x00, add checksum
   valve:
-    - name: "Gas Valve"
-      state: 
+    - name: 'Gas Valve'
+      state:
         data: [0x90]
       state_open:
         offset: 1
@@ -408,28 +405,27 @@ homenet_bridge:
         data: [0x11, 0x01, 0x80, 0x00, 0x00, 0x00, 0x00]
         ack: [0x91, 0x88, 0x88]
 
-
   #상태 ELV 0x23, 0x01, 0xXX, 0x00, 0x00, 0x00, 0x00, add checksum
   sensor:
-    - name: "Elevator Floors"
-      icon: "mdi:elevator"
-      state: 
+    - name: 'Elevator Floors'
+      icon: 'mdi:elevator'
+      state:
         data: [0x23]
       state_number:
         offset: 2
         length: 1
         precision: 0
 
-  #명령 0xA0, 0x01, 0x01, 0x00, 0x08, 0x15, 0x00, add checksum 
+  #명령 0xA0, 0x01, 0x01, 0x00, 0x08, 0x15, 0x00, add checksum
   button:
-    - name: "Elevator Call"
-      icon: "mdi:elevator"
-      command_on: 
+    - name: 'Elevator Call'
+      icon: 'mdi:elevator'
+      command_on:
         data: [0xA0, 0x01, 0x01, 0x00, 0x08, 0x15, 0x00]
         ack: [0x23]
 
   switch:
-    - name: "Switch 7"
+    - name: 'Switch 7'
       state:
         data: [0xF8, 0x00, 0x07]
         mask: [0xF8, 0x00, 0xFF]
