--- a/packages/core/config/ezville.new.yaml
+++ b/packages/core/config/ezville.new.yaml
@@ -17,8 +17,8 @@ homenet_bridge:
     tx_checksum: xor_add
 
   light:
-    - name: "light_1_0"
-      state: 
+    - name: 'light_1_0'
+      state:
         data: [0x0e, 0x11, 0x81]
       state_off:
         offset: 5
@@ -34,8 +34,8 @@ homenet_bridge:
         data: [0x0e, 0x11, 0x41, 0x03, 0x0f, 0x00, 0x00]
         ack: [0x0e, 0x11, 0xC1]
 
-    - name: "light_1_1"
-      state: 
+    - name: 'light_1_1'
+      state:
         data: [0x0e, 0x11, 0x81]
       state_on:
         offset: 5
@@ -50,8 +50,8 @@ homenet_bridge:
         data: [0x0e, 0x11, 0x41, 0x03, 0x01, 0x00, 0x00]
         ack: [0x0e, 0x11, 0xC1]
 
-    - name: "light_1_2"
-      state: 
+    - name: 'light_1_2'
+      state:
         data: [0x0e, 0x11, 0x81]
       state_on:
         offset: 6
@@ -66,8 +66,8 @@ homenet_bridge:
         data: [0x0e, 0x11, 0x41, 0x03, 0x02, 0x00, 0x00]
         ack: [0x0e, 0x11, 0xC1]
 
-    - name: "light_1_3"
-      state: 
+    - name: 'light_1_3'
+      state:
         data: [0x0e, 0x11, 0x81]
       state_on:
         offset: 7
@@ -82,8 +82,8 @@ homenet_bridge:
         data: [0x0e, 0x11, 0x41, 0x03, 0x03, 0x00, 0x00]
         ack: [0x0e, 0x11, 0xC1]
 
-    - name: "light_2_0"
-      state: 
+    - name: 'light_2_0'
+      state:
         data: [0x0e, 0x12, 0x81]
       state_off:
         offset: 5
@@ -99,8 +99,8 @@ homenet_bridge:
         data: [0x0e, 0x12, 0x41, 0x03, 0x0f, 0x00, 0x00]
         ack: [0x0e, 0x12, 0xC1]
 
-    - name: "light_2_1"
-      state: 
+    - name: 'light_2_1'
+      state:
         data: [0x0e, 0x12, 0x81]
       state_on:
         offset: 5
@@ -115,8 +115,8 @@ homenet_bridge:
         data: [0x0e, 0x12, 0x41, 0x03, 0x01, 0x00, 0x00]
         ack: [0x0e, 0x12, 0xC1]
 
-    - name: "light_2_2"
-      state: 
+    - name: 'light_2_2'
+      state:
         data: [0x0e, 0x12, 0x81]
       state_on:
         offset: 6
@@ -131,8 +131,8 @@ homenet_bridge:
         data: [0x0e, 0x12, 0x41, 0x03, 0x02, 0x00, 0x00]
         ack: [0x0e, 0x12, 0xC1]
 
-    - name: "light_3_1"
-      state: 
+    - name: 'light_3_1'
+      state:
         data: [0x0e, 0x13, 0x81]
       state_on:
         offset: 5
@@ -147,8 +147,8 @@ homenet_bridge:
         data: [0x0e, 0x13, 0x41, 0x03, 0x01, 0x00, 0x00]
         ack: [0x0e, 0x13, 0xC1]
 
-    - name: "light_4_1"
-      state: 
+    - name: 'light_4_1'
+      state:
         data: [0x0e, 0x14, 0x81]
       state_on:
         offset: 5
@@ -164,170 +164,170 @@ homenet_bridge:
         ack: [0x0e, 0x14, 0xC1]
 
   sensor:
-    - name: "Current Power Usage"
-      state: 
+    - name: 'Current Power Usage'
+      state:
         data: [0x30, 0x03, 0x81]
       accuracy_decimals: 2
-      unit_of_measurement: "W"
-      state_number: 
+      unit_of_measurement: 'W'
+      state_number:
         offset: 6
         length: 3
         precision: 2
         signed: False
         decode: bcd
 
-    - name: "Total Power Usage"
-      state: 
+    - name: 'Total Power Usage'
+      state:
         data: [0x30, 0x03, 0x81]
       accuracy_decimals: 1
-      unit_of_measurement: "kWh"
-      state_number: 
+      unit_of_measurement: 'kWh'
+      state_number:
         offset: 9
         length: 3
         precision: 1
         signed: False
         decode: bcd
 
-    - name: "Total Water Usage"
-      state: 
+    - name: 'Total Water Usage'
+      state:
         data: [0x30, 0x01, 0x81]
       accuracy_decimals: 2
-      unit_of_measurement: "m³"
+      unit_of_measurement: 'm³'
       command_update: [0x30, 0x01, 0x01, 0x00]
-      state_number: 
+      state_number:
         offset: 9
         length: 3
         precision: 2
         signed: False
         decode: bcd
 
-    - name: "Total Gas Usage"
-      state: 
+    - name: 'Total Gas Usage'
+      state:
         data: [0x30, 0x02, 0x81]
       accuracy_decimals: 2
-      unit_of_measurement: "m³"
+      unit_of_measurement: 'm³'
       command_update: [0x30, 0x02, 0x01, 0x00]
-      state_number: 
+      state_number:
         offset: 9
         length: 3
         precision: 2
         signed: False
         decode: bcd
 
-    - name: "power_1_1"
-      state: 
+    - name: 'power_1_1'
+      state:
         data: [0x39, 0x1f, 0x81]
       accuracy_decimals: 1
-      unit_of_measurement: "W"
-      state_number: 
+      unit_of_measurement: 'W'
+      state_number:
         offset: 5
         length: 3
         precision: 1
         signed: False
         decode: bcd
 
-    - name: "power_1_2"
-      state: 
+    - name: 'power_1_2'
+      state:
         data: [0x39, 0x1f, 0x81]
       accuracy_decimals: 1
-      unit_of_measurement: "W"
-      state_number: 
+      unit_of_measurement: 'W'
+      state_number:
         offset: 8
         length: 3
         precision: 1
         signed: False
         decode: bcd
 
-    - name: "power_2_1"
-      state: 
+    - name: 'power_2_1'
+      state:
         data: [0x39, 0x2f, 0x81]
       accuracy_decimals: 1
-      unit_of_measurement: "W"
-      state_number: 
+      unit_of_measurement: 'W'
+      state_number:
         offset: 5
         length: 3
         precision: 1
         signed: False
         decode: bcd
 
-    - name: "power_2_2"
-      state: 
+    - name: 'power_2_2'
+      state:
         data: [0x39, 0x2f, 0x81]
       accuracy_decimals: 1
-      unit_of_measurement: "W"
-      state_number: 
+      unit_of_measurement: 'W'
+      state_number:
         offset: 8
         length: 3
         precision: 1
         signed: False
         decode: bcd
 
-    - name: "power_3_1"
-      state: 
+    - name: 'power_3_1'
+      state:
         data: [0x39, 0x3f, 0x81]
       accuracy_decimals: 1
-      unit_of_measurement: "W"
-      state_number: 
+      unit_of_measurement: 'W'
+      state_number:
         offset: 5
         length: 3
         precision: 1
         signed: False
         decode: bcd
 
-    - name: "power_3_2"
-      state: 
+    - name: 'power_3_2'
+      state:
         data: [0x39, 0x3f, 0x81]
       accuracy_decimals: 1
-      unit_of_measurement: "W"
-      state_number: 
+      unit_of_measurement: 'W'
+      state_number:
         offset: 8
         length: 3
         precision: 1
         signed: False
         decode: bcd
 
-    - name: "power_4_1"
-      state: 
+    - name: 'power_4_1'
+      state:
         data: [0x39, 0x4f, 0x81]
       accuracy_decimals: 1
-      unit_of_measurement: "W"
-      state_number: 
+      unit_of_measurement: 'W'
+      state_number:
         offset: 5
         length: 3
         precision: 1
         signed: False
         decode: bcd
 
-    - name: "power_4_2"
-      state: 
+    - name: 'power_4_2'
+      state:
         data: [0x39, 0x4f, 0x81]
       accuracy_decimals: 1
-      unit_of_measurement: "W"
-      state_number: 
+      unit_of_measurement: 'W'
+      state_number:
         offset: 8
         length: 3
         precision: 1
         signed: False
         decode: bcd
 
-    - name: "power_8_1"
-      state: 
+    - name: 'power_8_1'
+      state:
         data: [0x39, 0x8f, 0x81]
       accuracy_decimals: 1
-      unit_of_measurement: "W"
-      state_number: 
+      unit_of_measurement: 'W'
+      state_number:
         offset: 5
         length: 3
         precision: 1
         signed: False
         decode: bcd
 
-    - name: "power_8_2"
-      state: 
+    - name: 'power_8_2'
+      state:
         data: [0x39, 0x8f, 0x81]
       accuracy_decimals: 1
-      unit_of_measurement: "W"
-      state_number: 
+      unit_of_measurement: 'W'
+      state_number:
         offset: 8
         length: 3
         precision: 1
@@ -335,8 +335,8 @@ homenet_bridge:
         decode: bcd
 
   switch:
-    - name: "outlet_1_1"
-      state: 
+    - name: 'outlet_1_1'
+      state:
         data: [0x39, 0x1f, 0x81]
       state_on:
         offset: 5
@@ -353,8 +353,8 @@ homenet_bridge:
         data: [0x39, 0x11, 0x41, 0x01, 0x10]
         ack: [0x39, 0x11, 0xC1]
 
-    - name: "outlet_1_2"
-      state: 
+    - name: 'outlet_1_2'
+      state:
         data: [0x39, 0x1f, 0x81]
       state_on:
         offset: 8
@@ -371,8 +371,8 @@ homenet_bridge:
         data: [0x39, 0x12, 0x41, 0x01, 0x10]
         ack: [0x39, 0x12, 0xC1]
 
-    - name: "outlet_2_1"
-      state: 
+    - name: 'outlet_2_1'
+      state:
         data: [0x39, 0x2f, 0x81]
       state_on:
         offset: 5
@@ -389,8 +389,8 @@ homenet_bridge:
         data: [0x39, 0x21, 0x41, 0x01, 0x10]
         ack: [0x39, 0x21, 0xC1]
 
-    - name: "outlet_2_2"
-      state: 
+    - name: 'outlet_2_2'
+      state:
         data: [0x39, 0x2f, 0x81]
       state_on:
         offset: 8
@@ -407,8 +407,8 @@ homenet_bridge:
         data: [0x39, 0x22, 0x41, 0x01, 0x10]
         ack: [0x39, 0x22, 0xC1]
 
-    - name: "outlet_3_1"
-      state: 
+    - name: 'outlet_3_1'
+      state:
         data: [0x39, 0x3f, 0x81]
       state_on:
         offset: 5
@@ -425,8 +425,8 @@ homenet_bridge:
         data: [0x39, 0x31, 0x41, 0x01, 0x10]
         ack: [0x39, 0x31, 0xC1]
 
-    - name: "outlet_3_2"
-      state: 
+    - name: 'outlet_3_2'
+      state:
         data: [0x39, 0x3f, 0x81]
       state_on:
         offset: 8
@@ -443,8 +443,8 @@ homenet_bridge:
         data: [0x39, 0x32, 0x41, 0x01, 0x10]
         ack: [0x39, 0x32, 0xC1]
 
-    - name: "outlet_4_1"
-      state: 
+    - name: 'outlet_4_1'
+      state:
         data: [0x39, 0x4f, 0x81]
       state_on:
         offset: 5
@@ -460,9 +460,9 @@ homenet_bridge:
       command_off:
         data: [0x39, 0x41, 0x41, 0x01, 0x10]
         ack: [0x39, 0x41, 0xC1]
-      
-    - name: "outlet_4_2"
-      state: 
+
+    - name: 'outlet_4_2'
+      state:
         data: [0x39, 0x4f, 0x81]
       state_on:
         offset: 8
@@ -479,8 +479,8 @@ homenet_bridge:
         data: [0x39, 0x42, 0x41, 0x01, 0x10]
         ack: [0x39, 0x42, 0xC1]
 
-    - name: "outlet_8_1"
-      state: 
+    - name: 'outlet_8_1'
+      state:
         data: [0x39, 0x8f, 0x81]
       state_on:
         offset: 5
@@ -497,8 +497,8 @@ homenet_bridge:
         data: [0x39, 0x81, 0x41, 0x01, 0x10]
         ack: [0x39, 0x81, 0xC1]
 
-    - name: "outlet_8_2"
-      state: 
+    - name: 'outlet_8_2'
+      state:
         data: [0x39, 0x8f, 0x81]
       state_on:
         offset: 8
@@ -516,12 +516,12 @@ homenet_bridge:
         ack: [0x39, 0x82, 0xC1]
 
   climate:
-    - name: "thermostat 1"
+    - name: 'thermostat 1'
       visual:
         min_temperature: 5 °C
         max_temperature: 40 °C
         temperature_step: 0.5 °C
-      state: 
+      state:
         data: [0x36, 0x1f, 0x81]
       state_temperature_target:
         offset: 9
@@ -576,12 +576,12 @@ homenet_bridge:
         data: [0x36, 0x11, 0x45, 0x01, 0x00]
         ack: [0x36, 0x11, 0xc5]
 
-    - name: "thermostat 2"
+    - name: 'thermostat 2'
       visual:
         min_temperature: 5 °C
         max_temperature: 40 °C
         temperature_step: 0.5 °C
-      state: 
+      state:
         data: [0x36, 0x1f, 0x81]
       state_temperature_target:
         offset: 11
@@ -636,12 +636,12 @@ homenet_bridge:
         data: [0x36, 0x12, 0x45, 0x01, 0x00]
         ack: [0x36, 0x12, 0xc5]
 
-    - name: "thermostat 3"
+    - name: 'thermostat 3'
       visual:
         min_temperature: 5 °C
         max_temperature: 40 °C
         temperature_step: 0.5 °C
-      state: 
+      state:
         data: [0x36, 0x1f, 0x81]
       state_temperature_target:
         offset: 13
@@ -696,12 +696,12 @@ homenet_bridge:
         data: [0x36, 0x13, 0x45, 0x01, 0x00]
         ack: [0x36, 0x13, 0xc5]
 
-    - name: "thermostat 4"
+    - name: 'thermostat 4'
       visual:
         min_temperature: 5 °C
         max_temperature: 40 °C
         temperature_step: 0.5 °C
-      state: 
+      state:
         data: [0x36, 0x1f, 0x81]
       state_temperature_target:
         offset: 15
@@ -757,9 +757,9 @@ homenet_bridge:
         ack: [0x36, 0x14, 0xc5]
 
   valve:
-    - name: "Gas Valve"
+    - name: 'Gas Valve'
       device_class: gas
-      state: 
+      state:
         data: [0x12, 0x01, 0x81]
       state_closed:
         offset: 5
@@ -767,11 +767,11 @@ homenet_bridge:
       state_open:
         offset: 5
         data: [0x01]
-      command_close: 
+      command_close:
         data: [0x33, 0x01, 0x81, 0x03, 0x00, 0x05, 0x00]
 
   button:
-    - name: "Elevator Call"
-      icon: "mdi:elevator"
-      command_on: 
+    - name: 'Elevator Call'
+      icon: 'mdi:elevator'
+      command_on:
         data: [0x33, 0x01, 0x81, 0x03, 0x00, 0x24, 0x00]
