--- a/packages/core/config/hyundai_door.new.yaml
+++ b/packages/core/config/hyundai_door.new.yaml
@@ -17,8 +17,8 @@ homenet_bridge:
     tx_footer: [0xEE]
 
   binary_sensor:
-    - name: "Door Bell"
-      icon: "mdi:bell-ring"
+    - name: 'Door Bell'
+      icon: 'mdi:bell-ring'
       state:
         data: [0xB4, 0x00, 0x00]
         mask: [0xB4, 0xFF, 0xFF]
@@ -29,8 +29,8 @@ homenet_bridge:
         offset: 0
         data: [0xB6]
 
-    - name: "Door Bell Common"
-      icon: "mdi:bell-ring"
+    - name: 'Door Bell Common'
+      icon: 'mdi:bell-ring'
       state:
         data: [0x58, 0x00, 0x00]
         mask: [0x58, 0xFF, 0xFF]
@@ -42,29 +42,29 @@ homenet_bridge:
         data: [0x5C]
 
   button:
-    - name: "Door Open Common"
-      icon: "mdi:door-sliding-open"
-      command_on: 
+    - name: 'Door Open Common'
+      icon: 'mdi:door-sliding-open'
+      command_on:
         data: [0x61, 0x00, 0x00]
-    - name: "Door Open"
-      icon: "mdi:door-sliding-open"
-      command_on: 
+    - name: 'Door Open'
+      icon: 'mdi:door-sliding-open'
+      command_on:
         data: [0xB4, 0x00, 0x00]
 
   switch:
-    - name: "Door Call Common"
-      icon: "mdi:phone"
-      command_on: 
+    - name: 'Door Call Common'
+      icon: 'mdi:phone'
+      command_on:
         data: [0x5F, 0x00, 0x00]
-      command_off: 
+      command_off:
         data: [0x60, 0x00, 0x00]
-    - name: "Auto Opening Common"
-      icon: "mdi:door-open"
-    - name: "Door Call"
-      icon: "mdi:phone"
-      command_on: 
+    - name: 'Auto Opening Common'
+      icon: 'mdi:door-open'
+    - name: 'Door Call'
+      icon: 'mdi:phone'
+      command_on:
         data: [0xB7, 0x00, 0x00]
-      command_off: 
+      command_off:
         data: [0xBB, 0x00, 0x00]
-    - name: "Auto Opening"
-      icon: "mdi:door-open"
+    - name: 'Auto Opening'
+      icon: 'mdi:door-open'
