--- a/packages/core/config/hyundai_imazu.new.yaml
+++ b/packages/core/config/hyundai_imazu.new.yaml
@@ -20,36 +20,36 @@ homenet_bridge:
     tx_checksum: xor
 
   sensor:
-    - name: "Room 1 Plug 1 Power"
-      unit_of_measurement: "W"
-      state: 
+    - name: 'Room 1 Plug 1 Power'
+      unit_of_measurement: 'W'
+      state:
         data: [0x12, 0x01, 0x1f, 0x04, 0x40, 0x11]
       state_number:
         offset: 8
         length: 2
         precision: 0
 
-    - name: "Room 1 Plug 2 Power"
-      unit_of_measurement: "W"
-      state: 
+    - name: 'Room 1 Plug 2 Power'
+      unit_of_measurement: 'W'
+      state:
         data: [0x12, 0x01, 0x1f, 0x04, 0x40, 0x12]
       state_number:
         offset: 8
-        length: 2 
-        precision: 0 
+        length: 2
+        precision: 0
 
-    - name: "Room 2 Plug 1 Power"
-      unit_of_measurement: "W"
-      state: 
+    - name: 'Room 2 Plug 1 Power'
+      unit_of_measurement: 'W'
+      state:
         data: [0x12, 0x01, 0x1f, 0x04, 0x40, 0x21]
       state_number:
         offset: 8
-        length: 2 
-        precision: 0 
+        length: 2
+        precision: 0
 
-    - name: "Room 2 Plug 2 Power"
-      unit_of_measurement: "W"
-      state: 
+    - name: 'Room 2 Plug 2 Power'
+      unit_of_measurement: 'W'
+      state:
         data: [0x12, 0x01, 0x1f, 0x04, 0x40, 0x22]
       state_number:
         offset: 8
@@ -57,9 +57,9 @@ homenet_bridge:
         precision: 0
 
   switch:
-    - name: "Room 1 Plug 1"
-      icon: "mdi:power-socket-eu"
-      state: 
+    - name: 'Room 1 Plug 1'
+      icon: 'mdi:power-socket-eu'
+      state:
         data: [0x00, 0x01, 0x1f, 0x04, 0x40, 0x11]
         mask: [0x00, 0xff, 0xff, 0xff, 0xff, 0xff]
       state_on:
@@ -75,9 +75,9 @@ homenet_bridge:
         data: [0x0b, 0x01, 0x1f, 0x02, 0x40, 0x11, 0x02, 0x00]
         ack: [0x0b, 0x01, 0x1f, 0x04, 0x40, 0x11, 0x02, 0x02]
 
-    - name: "Room 1 Plug 2"
-      icon: "mdi:power-socket-eu"
-      state: 
+    - name: 'Room 1 Plug 2'
+      icon: 'mdi:power-socket-eu'
+      state:
         data: [0x00, 0x01, 0x1f, 0x04, 0x40, 0x12]
         mask: [0x00, 0xff, 0xff, 0xff, 0xff, 0xff]
       state_on:
@@ -93,9 +93,9 @@ homenet_bridge:
         data: [0x0b, 0x01, 0x1f, 0x02, 0x40, 0x12, 0x02, 0x00]
         ack: [0x0b, 0x01, 0x1f, 0x04, 0x40, 0x12, 0x02, 0x02]
 
-    - name: "Room 2 Plug 1"
-      icon: "mdi:power-socket-eu"
-      state: 
+    - name: 'Room 2 Plug 1'
+      icon: 'mdi:power-socket-eu'
+      state:
         data: [0x00, 0x01, 0x1F, 0x04, 0x40, 0x21]
         mask: [0x00, 0xff, 0xff, 0xff, 0xff, 0xff]
       state_on:
@@ -110,10 +110,10 @@ homenet_bridge:
       command_off:
         data: [0x0b, 0x01, 0x1f, 0x02, 0x40, 0x21, 0x02, 0x00]
         ack: [0x0b, 0x01, 0x1f, 0x04, 0x40, 0x21, 0x02, 0x02]
-  
-    - name: "Room 2 Plug 2"
-      icon: "mdi:power-socket-eu"
-      state: 
+
+    - name: 'Room 2 Plug 2'
+      icon: 'mdi:power-socket-eu'
+      state:
         data: [0x00, 0x01, 0x1F, 0x04, 0x40, 0x22]
         mask: [0x00, 0xff, 0xff, 0xff, 0xff, 0xff]
       state_on:
@@ -130,8 +130,8 @@ homenet_bridge:
         ack: [0x0b, 0x01, 0x1f, 0x04, 0x40, 0x22, 0x02, 0x02]
 
   light:
-    - name: "Room 1 Light 1"
-      state: 
+    - name: 'Room 1 Light 1'
+      state:
         data: [0x00, 0x01, 0x19, 0x04, 0x40, 0x11]
         mask: [0x00, 0xff, 0xff, 0xff, 0xff, 0xff]
       state_on:
@@ -147,8 +147,8 @@ homenet_bridge:
         data: [0x0b, 0x01, 0x19, 0x02, 0x40, 0x11, 0x02, 0x00]
         ack: [0x0b, 0x01, 0x19, 0x04, 0x40, 0x11, 0x02, 0x02]
 
-    - name: "Room 1 Light 2"
-      state: 
+    - name: 'Room 1 Light 2'
+      state:
         data: [0x00, 0x01, 0x19, 0x04, 0x40, 0x12]
         mask: [0x00, 0xff, 0xff, 0xff, 0xff, 0xff]
       state_on:
@@ -164,8 +164,8 @@ homenet_bridge:
         data: [0x0b, 0x01, 0x19, 0x02, 0x40, 0x12, 0x02, 0x00]
         ack: [0x0b, 0x01, 0x19, 0x04, 0x40, 0x12, 0x02, 0x02]
 
-    - name: "Room 1 Light 3"
-      state: 
+    - name: 'Room 1 Light 3'
+      state:
         data: [0x00, 0x01, 0x19, 0x04, 0x40, 0x13]
         mask: [0x00, 0xff, 0xff, 0xff, 0xff, 0xff]
       state_on:
@@ -181,8 +181,8 @@ homenet_bridge:
         data: [0x0b, 0x01, 0x19, 0x02, 0x40, 0x13, 0x02, 0x00]
         ack: [0x0b, 0x01, 0x19, 0x04, 0x40, 0x13, 0x02, 0x02]
 
-    - name: "Room 1 Light 4"
-      state: 
+    - name: 'Room 1 Light 4'
+      state:
         data: [0x00, 0x01, 0x19, 0x04, 0x40, 0x14]
         mask: [0x00, 0xff, 0xff, 0xff, 0xff, 0xff]
       state_on:
@@ -198,8 +198,8 @@ homenet_bridge:
         data: [0x0b, 0x01, 0x19, 0x02, 0x40, 0x14, 0x02, 0x00]
         ack: [0x0b, 0x01, 0x19, 0x04, 0x40, 0x14, 0x02, 0x02]
 
-    - name: "Room 2 Light 1"
-      state: 
+    - name: 'Room 2 Light 1'
+      state:
         data: [0x00, 0x01, 0x19, 0x04, 0x40, 0x21]
         mask: [0x00, 0xff, 0xff, 0xff, 0xff, 0xff]
       state_on:
@@ -214,9 +214,9 @@ homenet_bridge:
       command_off:
         data: [0x0b, 0x01, 0x19, 0x02, 0x40, 0x21, 0x02, 0x00]
         ack: [0x0b, 0x01, 0x19, 0x04, 0x40, 0x21, 0x02, 0x02]
-    
-    - name: "Room 2 Light 2"
-      state: 
+
+    - name: 'Room 2 Light 2'
+      state:
         data: [0x00, 0x01, 0x19, 0x04, 0x40, 0x22]
         mask: [0x00, 0xff, 0xff, 0xff, 0xff, 0xff]
       state_on:
@@ -228,12 +228,12 @@ homenet_bridge:
       command_on:
         data: [0x0b, 0x01, 0x19, 0x02, 0x40, 0x22, 0x01, 0x00]
         ack: [0x0b, 0x01, 0x19, 0x04, 0x40, 0x22, 0x01, 0x01]
-      command_off: 
+      command_off:
         data: [0x0b, 0x01, 0x19, 0x02, 0x40, 0x22, 0x02, 0x00]
         ack: [0x0b, 0x01, 0x19, 0x04, 0x40, 0x22, 0x02, 0x02]
 
-    - name: "Room 2 Light 3"
-      state: 
+    - name: 'Room 2 Light 3'
+      state:
         data: [0x00, 0x01, 0x19, 0x04, 0x40, 0x23]
         mask: [0x00, 0xff, 0xff, 0xff, 0xff, 0xff]
       state_on:
@@ -245,14 +245,14 @@ homenet_bridge:
       command_on:
         data: [0x0b, 0x01, 0x19, 0x02, 0x40, 0x23, 0x01, 0x00]
         ack: [0x0b, 0x01, 0x19, 0x04, 0x40, 0x23, 0x01, 0x01]
-      command_off: 
+      command_off:
         data: [0x0b, 0x01, 0x19, 0x02, 0x40, 0x23, 0x02, 0x00]
         ack: [0x0b, 0x01, 0x19, 0x04, 0x40, 0x23, 0x02, 0x02]
 
   fan:
-    - name: "Room 1 Fan 1"
+    - name: 'Room 1 Fan 1'
       speed_cnt: 3
-      state: 
+      state:
         data: [0x00, 0x01, 0x2b, 0x04, 0x40, 0x11]
         mask: [0x00, 0xff, 0xff, 0xff, 0xff, 0xff]
       state_on:
@@ -301,12 +301,12 @@ homenet_bridge:
             value: 0
 
   climate:
-    - name: "Room 1 Heater 1"
+    - name: 'Room 1 Heater 1'
       visual:
         min_temperature: 5 °C
         max_temperature: 40 °C
         temperature_step: 1 °C
-      state: 
+      state:
         data: [0x00, 0x01, 0x18, 0x04, 0x45, 0x11]
         mask: [0x00, 0xff, 0xff, 0xff, 0xff, 0xff]
       state_temperature_current:
@@ -355,12 +355,12 @@ homenet_bridge:
             signed: false
             endian: big
 
-    - name: "Room 1 Heater 2"
+    - name: 'Room 1 Heater 2'
       visual:
         min_temperature: 5 °C
         max_temperature: 40 °C
         temperature_step: 1 °C
-      state: 
+      state:
         data: [0x00, 0x01, 0x18, 0x04, 0x45, 0x12]
         mask: [0x00, 0xff, 0xff, 0xff, 0xff, 0xff]
       state_temperature_current:
@@ -409,12 +409,12 @@ homenet_bridge:
             signed: false
             endian: big
 
-    - name: "Room 1 Heater 3"
+    - name: 'Room 1 Heater 3'
       visual:
         min_temperature: 5 °C
         max_temperature: 40 °C
         temperature_step: 1 °C
-      state: 
+      state:
         data: [0x00, 0x01, 0x18, 0x04, 0x45, 0x13]
         mask: [0x00, 0xff, 0xff, 0xff, 0xff, 0xff]
       state_temperature_current:
@@ -463,12 +463,12 @@ homenet_bridge:
             signed: false
             endian: big
 
-    - name: "Room 1 Heater 4"
+    - name: 'Room 1 Heater 4'
       visual:
         min_temperature: 5 °C
         max_temperature: 40 °C
         temperature_step: 1 °C
-      state: 
+      state:
         data: [0x00, 0x01, 0x18, 0x04, 0x45, 0x14]
         mask: [0x00, 0xff, 0xff, 0xff, 0xff, 0xff]
       state_temperature_current:
@@ -517,12 +517,12 @@ homenet_bridge:
             signed: false
             endian: big
 
-    - name: "Room 1 Heater 5"
+    - name: 'Room 1 Heater 5'
       visual:
         min_temperature: 18 °C
         max_temperature: 30 °C
         temperature_step: 1 °C
-      state: 
+      state:
         data: [0x00, 0x01, 0x18, 0x04, 0x45, 0x15]
         mask: [0x00, 0xff, 0xff, 0xff, 0xff, 0xff]
       state_temperature_current:
